# Lobster

./: .gdbinit  .gitignore  .gitmodules  Dockerfile  README.md  changelog.md  docker-start.sh  makefile  notes.txt  parse_tables.py  parse_times.py  readme.md  time.py
.github/workflows/: scallopy.yml
core/: Cargo.toml  build.rs
core/src/: lib.rs  tracing.rs
core/src/common/: adt_variant_registry.rs  expr.rs  foreign_function.rs  foreign_predicate.rs  generic_tuple.rs  tuple.rs  tuple_type.rs  value.rs  value_type.rs
core/src/common/foreign_functions/: abs.rs  atan2.rs  ceil.rs  floor.rs  powf.rs  sign.rs
core/src/common/foreign_predicates/: new_tag_variable.rs
core/src/compiler/back/: scc.rs
core/src/compiler/front/ast/: constant.rs
core/src/compiler/ram/: ast.rs  dependency.rs  pretty.rs  ram2rs.rs
core/src/compiler/ram/optimizations/: project_cascade.rs
core/src/gpu_runtime/: array.rs  dataflow.rs  entry.c  expr.rs  ffi.rs  mod.rs  optimize.rs  relation.rs  stratum.rs  tag.rs  tuple.rs  value.rs
core/src/gpu_runtime/libsclgpu/: .clang-format  .gitignore  CMakeLists.txt  alloc.cu  alloc.h  bindings.cu  bindings.h  configure.sh  dataflow.cu  dataflow.h  device_vec.h  expr.cu  expr.h  filter.cu  filter.h  find.cu  find.h  flame.h  intersect.cu  intersect.h  join.cu  join.h  lib.cu  merge.cu  merge.h  merge_specialized.cu  normalize.cu  normalize.h  overwrite_one.cu  overwrite_one.h  product.cu  product.h  project.cu  project.h  provenance.cu  provenance.h  remove_nan.cu  remove_nan.h  set_difference.cu  set_difference.h  (+9 more)
core/src/gpu_runtime/libsclgpu/join_gather/: join_gather.cu  join_gather.h
core/src/gpu_runtime/libsclgpu/project/: project_constant.cu  project_constant.h  project_constant_dtkp.cu  project_interpret.cu  project_interpret.h  project_permute.cu  project_permute.h
core/src/gpu_runtime/libsclgpu/specializations/: normalize1.cu  normalize2.cu  normalize3.cu  normalize4.cu  normalize4s0.cu  normalize4s1.cu  normalize4s2.cu  normalize4s3.cu  normalize4s4.cu  normalize4s5.cu  normalize4s6.cu  normalize4s7.cu  normalize4s8.cu
core/src/gpu_runtime/libsclgpu/test/: cccl.cu  dat.cu  recent.txt  run_tests.cu  stable.txt
core/src/integrate/: context.rs  interpret.rs
core/src/runtime/database/extensional/: relation.rs
core/src/runtime/dynamic/: collection.rs  incremental.rs  iteration.rs
core/src/runtime/dynamic/dataflow/batching/: batch.rs
core/src/runtime/dynamic/dataflow/foreign_predicate/: constraint.rs  ground.rs  join.rs
core/src/runtime/env/: environment.rs
core/src/runtime/provenance/: provenance.rs
core/src/runtime/provenance/common/: diff_prob_storage.rs
core/src/runtime/provenance/differentiable/: diff_add_mult_prob.rs  diff_min_max_prob.rs  diff_top_k_proofs.rs
core/src/runtime/provenance/discrete/: unit.rs
core/src/runtime/provenance/probabilistic/: min_max_prob.rs  top_k_proofs.rs
core/src/runtime/statics/: tuple.rs
core/tests/integrate/: fp_batched.rs  mod.rs
cspa_results/: httpd.txt  linux.txt  postgres.txt
etc/scallopy/: Cargo.toml
etc/scallopy/scallopy/: __init__.py  forward.py  stdlib.py
etc/scallopy/src/: context.rs  foreign_predicate.rs  tuple.rs
etc/scallopy/tests/: foreign_attribute.py  foreign_predicate.py
evaluation/: ablation.sh  benchmark_pacman.sh  benchmark_pathx.sh  cspa.sh  parse_ablation.py  parse_sg_results.py  run_clutrr_lobster.sh  run_pacman_lobster.sh  sg.sh
examples/python/: batched_foreign_predicate.py
experiments/: .gitignore
experiments/clevr/: run_vision_only.py
experiments/clevr-v2/scl/: clevr_vqa.scl
experiments/clutrr/: eval_cpu.sh  eval_gpu.sh  json_to_csv.py  run_with_global.py  run_with_global_gpu.py
experiments/clutrr/scl/: clutrr_gpu.scl
experiments/ego4d/: example.scl  run.py  solve.scl
experiments/ego4d/example/: ground_truth.pkl  specs.json
experiments/ehr/: cancer.scl  run.py
experiments/ehr/doc/: all_fields.txt
experiments/ehr/scripts/: get_fields.py
experiments/gdlog/: fetch_data.sh  fetch_graphs.sh  make_pl.sh  make_sg.sh
experiments/gdlog/cspa/: cspa.scl  httpd.scl  linux.scl  postgres.scl  run_all_lobster.sh  run_all_scallop.sh  run_all_souffle.sh
experiments/gdlog/sg/: CA-HepTH.scl  Gnutella31.scl  SF.cedge.scl  com-dblp.scl  ego-Facebook.scl  fc_ocean.scl  fe-sphere.scl  sg.scl  (+6 more)
experiments/gqa/: dataset.py  gqa.scl  gqa_scallop.py  gqa_vilt_baseline.py  no_crop_baseline.txt  no_crop_results.txt  no_crop_results2.txt  vilt.scl
experiments/hwf/: generate.py  run.py  run_with_hwf_parser.py
experiments/lot/: readme.md  run_ho.py  run_ho_2.py  run_ho_cls.py  run_ho_cls_2.py
experiments/ltl/: example_1.scl  example_2.scl  ltl.scl  ltl_disj.scl
experiments/mnist_n/: sum_n.py
experiments/mnist_video/: example.scl  extract_digit_list.scl  generate_data.py  run_cnn.py  run_lstm.py  run_scallop.py
experiments/ofcp/: ofcp.scl  readme.md  test_ofcp.py
experiments/over-catches/: data.scl  over-catches-simple.scl  over-catches-ziyang-strings.scl  over-catches-ziyang.scl  over-catches.py
experiments/owasp/: detect_vul_gpt.scl  detect_vul_gpt_cot.scl  detect_vul_neurosym.scl  eval.py  stats.py  temp.scl
experiments/pacman_maze/: arena.py  run.py  run_1d.py  run_switchover.py
experiments/psa/: convert_to_pl.sh  convert_to_scl.sh  run_all_cpu.sh  run_all_gpu.sh  run_all_gpu_offload.sh  run_all_problog.sh
experiments/raster/: generate.py  raster.scl  requirements.txt  run.py  util.py  viz.py
experiments/rnafold/: readme.md
experiments/sg/: sg.scl
experiments/stsg/: example.py  gpt_specs_prog_str.json
experiments/test-libsclgpu/: 2join.py  adt.scl  difftopkgrads.py  filter.py  find.py  mugen.py  mugen.scl  nested_project.py  overflow.py  product.py  project.py  stratum_set.py  tc.py  tc.scl  unit-nonempty.py  unit.py
lab/: readme.md
lab/ast-derive/: Cargo.toml
lab/dyn-tensor-registry/: readme.md
lab/type-inference/: Cargo.toml
lab/visitor/: Cargo.toml
scripts/: build-distribution-on-linux.sh  build-distribution-on-m1-mac.sh  dynamic_load_scallop_wheel.py  sync-to-open-source.sh  sync-to-scallop-book.sh
(+215 files in other folders)
